# backend

./: .gitignore  CMakeLists.txt
include/: database.h  registry.h
public/: bang-resolver.js  bangresolver.js
src/: database.c  main.c  registry.c
src/mongoose/: mongoose.c
